<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.homeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/white"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="50dp"
        android:layout_marginHorizontal="15dp">
        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:background="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">
                <ImageView
                    android:src="@drawable/abc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/abc" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/nim_101200062"
                android:textSize="30sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/nama_ahmad_sanosi"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kelas_if_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_ahmad_10120062_mahasiswa_unikom_ac_id"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="13sp"
                tools:ignore="TextSizeCheck" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>